# facebook-scraper-api-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  setup_final.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: advanced_usage.py  basic_usage.py
facebook_scraper_sdk/: __init__.py  __version__.py  client.py  exceptions.py  retry.py
tests/: __init__.py  test_client.py  test_integration.py  test_retry.py
